--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,56 @@ form {
   border-bottom: 3px solid var(--primary-color);
 }
 
+/* Select */
+.field_select { 
+  position:relative; 
+  margin-top:1em; 
+}
+
+select {
+  font-size:14px;
+  padding: .25rem 0;
+  display:block;
+  width:100%;
+  height:30px;
+  color: var(--text-color);
+  background-color: var(--bg-color);
+  border:none;
+  border-bottom: 2px solid #666565;
+}
+
+select:focus {
+  outline:none;
+  border-bottom:3px solid var(--primary-color); 
+}
+
+select:not([value=""]) {
+  border-bottom:3px solid var(--primary-color); 
+}
+
+select:focus ~ label , select:not([value=""]):valid ~ label {
+  top:-18px;
+  font-size:14px;
+  font-weight: 600;
+  color: var(--primary-color);
+}
+
+.field_select label {
+  color: #666565; 
+  font-size:18px;
+  font-weight:normal;
+  position:absolute;
+  pointer-events:none;
+  top: 0;
+  transition:0.2s ease all; 
+  -moz-transition:0.2s ease all; 
+  -webkit-transition:0.2s ease all;
+}
+
+option:hover {
+  background-color: var(--primary-color);
+}
+
 /* Warning */
 .warning {
   margin-top: 1.5rem;
